Fixed Quarkus app to use 21 jdk version - build authentication-service, build quarkus-service